--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site
-title:              Massively
-bio:                'Jekyll version of the Massively theme by HTML5UP'
-description:        "Jekyll version of the Massively theme by HTML5UP"
-locale:             en_US
+title:              Dat Shiro Title
+bio:                'Dat Shiro Biology'
+description:        "This is some description about Dat Shiro"
+locale:             vi_VN
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 
@@ -12,12 +12,12 @@ disqus_shortname:   default
 # Social
 analytics-id:       "default"
 twitter:            default
-facebook:           default
-instagram:          default
-github:             default
+facebook:           dat.shiro
+instagram:          datshiro
+github:             datshiro
 
 # personal
-location:           Los Angeles, CA
+location:           Bien Hoa, Dong Nai
 phone:              310-318-5555
 email:              info@default.com # change this to your email to receive free emails for your contact submissions via Slapform.com
 
