MOD config some info

--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ github:             datshiro
 
 # personal
 location:           Bien Hoa, Dong Nai
-phone:              310-318-5555
-email:              info@default.com # change this to your email to receive free emails for your contact submissions via Slapform.com
+phone:              0937 409 682
+email:              datshiro@gmail.com # change this to your email to receive free emails for your contact submissions via Slapform.com
 
 # Other
 background_image:   /images/bg.jpg
