--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site/SEO settings
-email: okay@samesies.io
+email: datshiro@gmail.com
 baseurl: ""
 permalink: /:year/:month/:day/:title/
-google_analytics: 
+google_analytics:
 
-name: Thomas Vaeth
-title: The Barber Theme
+name: Dat Shiro
+title: Dat Shiro Blog
 description: >
   Barber is a blog theme for Jekyll built by Thomas Vaeth for Samesies using HTML, Sass, and JavaScript.
 url: http://barber.samesies.io
@@ -13,15 +13,17 @@ twitter_username: thomasvaeth
 default_img: /assets/images/seo.jpg
 social:
   - name: twitter
-    url: https://twitter.com/thomasvaeth
+    url: https://twitter.com/AtDatshiro
   - name: instagram
-    url: https://www.instagram.com/thomas.vaeth/
+    url: https://www.instagram.com/datshiro/
   - name: linkedin
-    url: https://www.linkedin.com/in/thomasvaeth/
+    url: https://www.linkedin.com/in/%C4%91%E1%BA%A1t-nguy%E1%BB%85n-qu%E1%BB%91c-164a76125/
   - name: github
-    url: https://github.com/samesies
-  - name: codepen
-    url: https://codepen.io/thomasvaeth/
+    url: https://github.com/datshiro
+
+#Collection:
+collections:
+  categories:
 
 # Contact settings
 contact_img: /assets/images/placeholder-28.jpg
@@ -39,6 +41,9 @@ author:
   - name: Thomas Vaeth
     bio: Thomas Vaeth was born in New York, raised in Pennsylvania, and transplanted in Washington. He was a Web Developer at Urban Influence, but now he's a Software Engineer at Getty Images.
     url: http://thomasvaeth.com
+  - name: Dat Shiro
+    bio: I was born in Viet Nam, raised in Bien Hoa city, and transplanted in Ho Chi Minh city. I am now a Web Application Developer
+    url: https://datshiro.github.io/
 
 # Pagination settings
 pagination:
@@ -57,7 +62,7 @@ autopages:
   collections:
     enabled: false
   tags:
-    layouts: 
+    layouts:
       - 'tag.html'
     title: 'The Barber Theme'
     permalink: '/tag/:tag'
