--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ name: Dat Shiro
 title: Dat Shiro Blog
 description: >
   Barber is a blog theme for Jekyll built by Thomas Vaeth for Samesies using HTML, Sass, and JavaScript.
-url: http://barber.samesies.io
+url: https://datshiro.github.io
 twitter_username: thomasvaeth
 default_img: /assets/images/seo.jpg
 social:
